--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,1 +1,15 @@
-<p>heroes works!</p>
+<h2>{{hero.name}} Details</h2>
+<div><span>id: </span>{{hero.id}}</div>
+<div>
+    <label>
+        Name:
+        <input placeholder="name" [(ngModel)]="hero.name">
+    </label>
+</div>
+
+<h2>My Heroes</h2>
+<ul>
+    <li *ngFor="let hero of heroes">
+        <span>{{hero.id}}</span> {{hero.name}}
+    </li>
+</ul> 
