--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -8,8 +8,12 @@
 </div>
 
 <h2>My Heroes</h2>
-<ul>
-    <li *ngFor="let hero of heroes">
+<ul class="heroes">
+    <li *ngFor="let hero of heroes" (click)="onSelect(hero)">
         <span>{{hero.id}}</span> {{hero.name}}
     </li>
 </ul> 
+
+<div *ngIf="selectedHero">
+    <h2>{{selectedHero.name}}</h2> 
+</div>
