--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -14,6 +14,4 @@
     </li>
 </ul> 
 
-<div *ngIf="selectedHero">
-    <h2>{{selectedHero.name}}</h2> 
-</div>
+<app-hero-detail [selectedHero]="selectedHero"></app-hero-detail>
