trying to understand master slave components

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,4 +1,4 @@
 
-<div *ngIf="selectedHero">
-    <h2>{{selectedHero.name}}</h2> 
+<div *ngIf="pickedHero">
+    <h2>{{pickedHero.name}}</h2> 
 </div>
