--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -14,4 +14,4 @@
     </li>
 </ul> 
 
-<app-hero-detail [selectedHero]="selectedHero"></app-hero-detail>
+<app-hero-detail [pickedHero]="selectedH"></app-hero-detail>
